# neuralwatt-tools

./: .gitignore  LICENSE  README.md  ruff.toml
.github/workflows/: ci.yml
plugins/llm-neuralwatt/: README.md  llm_neuralwatt.py  pyproject.toml
plugins/llm-neuralwatt/tests/: test_llm_neuralwatt.py
recipes/claude-code/: README.md
recipes/kilo-code/: README.md
recipes/nanoclaw/: README.md  TEST-INSTRUCTIONS.md
recipes/neovim/: README.md  energy-monitor.lua
recipes/openclaw/: README.md  openclaw.json
recipes/opencode/: README.md
recipes/tmux/: README.md
scripts/: README.md  nw-usage
